<resources>
    <string name="app_name">GridGaurd</string>
    <string name="background">background</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="please_select_your_user_type_to_continue">Please select your user type to continue</string>
    <string name="admin_icon">Admin Icon</string>
    <string name="customer">Customer</string>
    <string name="faculty_icon">Faculty Icon</string>
    <string name="utility_officer">Utility Officer</string>
    <string name="student_icon">Student Icon</string>
    <string name="field_technician">Field Technician</string>
    <string name="customer_sign_in">Customer Sign-In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="customer_id">Customer ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="_2025_guvnl">©2025 GUVNL</string>
    <string name="customer_sign_up">Customer Sign-Up</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="dummy_gretting">Welcome, Het</string>
    <string name="dummy_gretting_2">Customer Id: 12345678</string>
    <string name="settings">Settings</string>
    <string name="dummy_announcment">Planned maintenance on 10 Oct 2025: some areas will have scheduled outage. Click for details.</string>
    <string name="current_outage">Current Outage</string>
    <string name="no_outage_at_your_location">No outage at your location</string>
    <string name="report_new_outage">Report New Outage</string>
    <string name="track_complaints">Track Complaints</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="customer_care">Customer Care</string>
    <string name="contact_customer_care">Contact Customer Care</string>
    <string name="call">Call</string>
    <string name="report_outage">Report Outage</string>
    <string name="alerts">Alerts</string>
    <string name="view_bill">View Bill</string>
    <string name="complaint_12345">Complaint #12345</string>
    <string name="status_in_progress">Status: In Progress</string>
    <string name="important_scheduled_maintenance_on_28th_sept_from_10_am_to_2_pm">Important: Scheduled maintenance on 28th Sept from 10 AM to 2 PM.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>