<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".cust_signup">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/back_signin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <!-- CardView containing the Sign-In UI -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signinCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@android:color/transparent"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <!-- Title -->
                    <TextView
                        android:id="@+id/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/customer_sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCustID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/customer_id"
                            android:inputType="number"
                            android:maxLength="8"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFUllName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/full_name"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/address"
                            android:inputType="textPostalAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDOB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/date_of_birth"
                            android:inputType="date"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/gender"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etRePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/re_enter_password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:padding="13dp"
                        android:text="@string/sign_up"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:backgroundTint="#877A73"
                        app:cornerRadius="12dp" />

                    <!-- Sign-Up Link -->
                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/already_have_an_account_sign_in"
                        android:textColor="#2962FF"
                        android:textSize="15sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>